# rolemesh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXPLORATION_NOTES.md  README.md  conftest.py  pm_quality.jsonl  pyproject.toml  requirements.txt
.omc/: project-memory.json
config/: throttle.yaml
docs/: Agent-Addition-Scenario.md  Architecture.md  Delegation-Protocol.md  Engineering-Rules.md  Getting-Started.md  Installer-UX.md  Integration-Status.md  MIGRATION.md  PRD.md  Phase-Plan.md  Quickstart-Checklist.md  Routing-Spec.md  Telegram-Bridge.md  Test-Plan.md  VNext-Design.md  Validation-Report-2026-03-08.md  validation-phase1-message.md  validation-phase1-stale.md  validation-phase2-pmquality.md
e2e-benchmark/: .gitignore  BENCHMARK_REPORT.md  Dockerfile  config.py  docker-compose.yml  requirements.txt  run_benchmark.py
scripts/: amp-analyst-delegate.sh  autoevoctl.sh  claude-delegate.sh  cleanup_rules_skills_weekly.sh  codex-delegate.sh  cokac-delegate.sh  com.rolemesh.worker.plist  gemini-delegate.sh  pm_quality_check.sh  quality-report.sh  rolemesh-init.sh  run_autoevo.sh  run_message_worker.sh  run_queue_worker.sh  smart-delegate.sh  start_all_workers.sh  start_bus_workers.sh  status.sh  telegram-route.sh  upd-bot-delegate.sh  update_pm_dashboard.sh  update_pm_quality_weekly.sh
tests/: test_aicomms_integration.py  test_announce_error.py  test_autoevo_pause_resume.py  test_batch_cooldown.py  test_circuit_breaker.py  test_claude_delegate.sh  test_cli_main.py  test_codex_delegate.py  test_contracts.py  test_e2e_smoke.py  test_init_db.py  test_install_e2e.py  (+20 more)
(+72 files in other folders)
